# CW_hh_bd

./: README.md  main.py  pyproject.toml
src/: db_manager.py  hh_vacancies.py  utils.py
